# opentelemetry.io

./: .codespellrc  .cspell.yml  .editorconfig  .gitignore  .gitmodules  .gitpod.yml  .htmltest.base.yml  .htmltest.yml  .lycheecache  .markdownlint-cli2.yaml  .markdownlint-for-specs.yml  .markdownlint.json  .markdownlint.yaml  .prettierignore  .textlintignore  .textlintrc.json  .textlintrc.yml  .vale.ini  .warnings-skip-list.txt  404_urls_data.json  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING-BLOG-POSTS.md  CONTRIBUTING.md  ISSUE_404_URLS.md  LICENSE  Makefile  NOTICE  OTelDayOSS  README.md  README_404_ANALYSIS.md  TODO.md  build-semconv-daily.yml  config.toml  config.yaml  create_404_issue.sh  cspell-update.sh  cspell.json  entry.html  (+10 more)
scripts/collector-sync/: README.md  pyproject.toml
scripts/collector-sync/src/documentation_sync/: __init__.py  __main__.py  component_data_generator.py  component_utils.py  doc_content_generator.py  doc_marker_updater.py  explorer_repository_manager.py  fix_spelling.py  inventory_manager.py  main.py  metadata_diagnostics.py  type_defs.py  update_docs.py  version_updater.py
scripts/collector-sync/tests/documentation_sync/: __init__.py  test_update_docs.py
scripts/collector-sync/tests/documentation_sync/fixtures/contrib/v0.140.0/: extension.yaml
scripts/collector-sync/tests/documentation_sync/fixtures/contrib/v0.140.1/: extension.yaml
scripts/collector-sync/tests/documentation_sync/fixtures/contrib/v0.141.0-snapshot/: extension.yaml
scripts/collector-sync/tests/documentation_sync/fixtures/core/v0.139.0/: extension.yaml
(+6139 files in other folders)
